force-app/main/default/objects/sugati__Payment_Log__c/sugati__Payment_Log__c.object-meta.xml
<CustomObject>
    <label>Payment Log</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>Payment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>