force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Card_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Card_Token__c</fullName>
    <label>Card_Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>