force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Card_Type__c</fullName>
    <label>Card_Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>