force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>