force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>