force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>