force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Payment_Gateway__c</fullName>
    <defaultValue>&apos;Other&apos;</defaultValue>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>EcommPay</fullName>
            </value>
            <value>
                <fullName>Ingenico</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>