force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>