force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Payment Logs</relationshipLabel>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>