force-app/main/default/objects/sugati__Payment_Log__c/fields/sugati__PL_XE_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__PL_XE_Token__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XE Token</label>
    <referenceTo>sugati__XE_Token__c</referenceTo>
    <relationshipLabel>Payment Logs</relationshipLabel>
    <relationshipName>Payment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>